code improved for validations, and shared preferences

--- a/Week5/BlockbusterRecycler/app/src/main/AndroidManifest.xml
+++ b/Week5/BlockbusterRecycler/app/src/main/AndroidManifest.xml
@@ -18,14 +18,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MovieDetail"/>
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:name=".MovieDetail"
+            android:theme="@style/Theme.AppCompat.NoActionBar"/>
+        <activity android:name=".MainActivity"/>
     </application>
 
 </manifest>
