--- a/Week5/BlockbusterRecycler/app/build.gradle
+++ b/Week5/BlockbusterRecycler/app/build.gradle
@@ -31,8 +31,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'androidx.room:room-runtime:2.2.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    annotationProcessor 'androidx.room:room-compiler:2.2.2'
 
 }
