--- a/Week5/BlockbusterRecycler/app/src/main/AndroidManifest.xml
+++ b/Week5/BlockbusterRecycler/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"
+        <activity android:name=".ui.LoginActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,9 +18,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MovieDetail"
+            android:name=".ui.MovieDetail"
             android:theme="@style/Theme.AppCompat.NoActionBar"/>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".ui.MainActivity"/>
     </application>
 
 </manifest>
