--- a/Week7/ThePokemons/app/build.gradle
+++ b/Week7/ThePokemons/app/build.gradle
@@ -62,5 +62,7 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    //Room
+    implementation 'androidx.room:room-ktx:2.2.5'
 
 }
