--- a/Week7/ThePokemons/app/build.gradle
+++ b/Week7/ThePokemons/app/build.gradle
@@ -64,5 +64,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     //Room
     implementation 'androidx.room:room-ktx:2.2.5'
+    annotationProcessor "androidx.room:room-compiler:2.2.5"
 
 }
