--- a/Week8/BlockbusterRecycler/app/build.gradle
+++ b/Week8/BlockbusterRecycler/app/build.gradle
@@ -26,10 +26,12 @@ android {
 }
 
 dependencies {
+    //room
     def room_version = "2.2.5"
     implementation "androidx.room:room-runtime:$room_version"
-    implementation 'androidx.room:room-ktx:2.2.5'
-    kapt "androidx.room:room-compiler:2.2.5"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    //support libraries
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.0'
@@ -37,9 +39,17 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation "androidx.cardview:cardview:1.0.0"
+    //coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha05'
+    //retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.7.2"
+    implementation "com.squareup.retrofit2:converter-gson:2.7.2"
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    //test
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
