compilation problems solved

--- a/Week8/BlockbusterRecycler/app/src/main/AndroidManifest.xml
+++ b/Week8/BlockbusterRecycler/app/src/main/AndroidManifest.xml
@@ -24,7 +24,9 @@
         <activity
             android:name=".ui.MovieDetail"
             android:theme="@style/Theme.AppCompat.NoActionBar"/>
-        <activity android:name=".ui.MainActivity"/>
+        <activity
+            android:name=".ui.MovieActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
