--- a/Week10/BlockbusterRecycler/app/build.gradle
+++ b/Week10/BlockbusterRecycler/app/build.gradle
@@ -26,7 +26,6 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        buildConfigField 'String', 'BASE_URL', "\"http://www.omdbapi.com/\""
     }
 
     buildTypes {
@@ -86,7 +85,7 @@ dependencies {
     //Koin
     implementation "org.koin:koin-android:$koin_version"
     implementation "org.koin:koin-androidx-scope:$koin_version"
-    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    implementation "org.koin:koin-android-viewmodel:$koin_version"
     //moshi
     implementation "com.squareup.moshi:moshi:$moshi_version"
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
