--- a/Week11/BlockbusterRecycler/app/src/main/AndroidManifest.xml
+++ b/Week11/BlockbusterRecycler/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.e.blockbusterrecycler">
 
     <application
+        android:name = ".app.DataMovieApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
